--- a/Changes
+++ b/Changes
@@ -1,8 +1,21 @@
 Changes for the Labyrinth-Plugin-Album
 
-1.01	08/01/2012
-	- check we have an accessible directory to store photos
-	- added missing modules in metadata provides.
+1.03	2013-01-06
+        - aded hits dispatch and template files.
+        - change file dates changed to meet W3CDTF standards.
+        - updated test suite.
+        - META tests no longer require specific versions.
+        - added minimum perl version (5.006).
+        - reworked Makefile.PL for clarity.
 
-1.00	04/01/2012
-	- first official release
+1.02	2012-01-25
+	    - allow config settings of maxphotowidth & maxphotoheight for photos, 
+	      and  maxthumbwidth & maxthumbheight for thumbnails.
+	    - set a default of 0 for parentid.
+
+1.01	2012-01-08
+	    - check we have an accessible directory to store photos
+	    - added missing modules in metadata provides.
+
+1.00	2012-01-04
+	    - first official release
