--- a/Changes
+++ b/Changes
@@ -1,5 +1,17 @@
 Changes for the Labyrinth-Plugin-Album
 
+1.04	2013-02-10
+        - added cover photo feature.
+        - added config support for image and thmbnail sizes.
+        - update field validation.
+        - default lowered to PUBLISHER.
+        - fixed hide gallery album.
+        - allow deletion of archive photos from filesystem.
+        - allow photos to be moved between albums.
+        - now requires Labyrinth Core 5.14.
+        - added LICENSE file.
+        - added INSTALL file.
+
 1.03	2013-01-06
         - aded hits dispatch and template files.
         - change file dates changed to meet W3CDTF standards.
