--- a/Changes
+++ b/Changes
@@ -1,4 +1,12 @@
-Changes for the Labyrinth-Plugin-Album
+Changes for Labyrinth-Plugin-Album
+==================================
+
+1.05	2013-10-20
+        - fixed XHTML tags.
+        - added button classes.
+        - updated titles and breadcrumbs.
+        - added slideshow template and javascript.
+        - add functionality to list multiple albums/photos.
 
 1.04	2013-02-10
         - added cover photo feature.
