--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes for Labyrinth-Plugin-Album
 ==================================
 
+1.06	2014-04-16
+        - fixed distribution name in META.
+
 1.05	2013-10-20
         - fixed XHTML tags.
         - added button classes.
