--- a/Changes
+++ b/Changes
@@ -1,6 +1,13 @@
 Changes for Labyrinth-Plugin-Album
 ==================================
 
+1.07	2014-10-21
+        - fixed license fields in META.json to be lists.
+        - extended META and functional test suite.
+        - added Labyrinth::Test::Harness to pre-requisites.
+        - suppress warnings (Pages).
+        - fixed several logic errors (Photos).
+
 1.06	2014-04-16
         - fixed distribution name in META.
 
